# yandex_uploader

./: .gitignore  README.md  base_windows.py  log_worker.py  pyproject.toml  settings.py  settings_.json  uploader.py  warninger.py  windows_uploader.py  yandex_disk.py
stubs/pytz/: __init__.pyi  exceptions.pyi  lazy.pyi  tzinfo.pyi
stubs/requests/: __init__.pyi  __version__.pyi  _internal_utils.pyi  adapters.pyi  api.pyi  auth.pyi  compat.pyi  cookies.pyi  exceptions.pyi  help.pyi  hooks.pyi  models.pyi  packages.pyi  sessions.pyi  status_codes.pyi  structures.pyi  utils.pyi
stubs/yadisk/: __init__.pyi  common.pyi  compat.pyi  exceptions.pyi  settings.pyi  utils.pyi  yadisk.pyi
stubs/yadisk/api/: __init__.pyi  api_request.pyi  auth.pyi  disk.pyi  operations.pyi  resources.pyi
stubs/yadisk/objects/: __init__.pyi  auth.pyi  disk.pyi  error_object.pyi  operations.pyi  resources.pyi  yadisk_object.pyi
tests/: test_warninger.py
