[tool.poetry]
name = "yandex-uploader"
version = "0.1.0"
description = ""
authors = ["sumarokov-vp <sumarokov.vp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yadisk = "^1.3.4"
pytz = "^2023.3.post1"
requests = "^2.31.0"
types-requests = "^2.31.0.10"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
import_heading_stdlib= "Standard Library"
import_heading_thirdparty= "Third Party Stuff"
import_heading_firstparty= "My Stuff"

multi_line_output= 5
line_length= 60
combine_as_imports= "True"
include_trailing_comma= "True"
force_grid_wrap= 2

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
